2005-03-14  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpwidgets-private.c (gimp_widgets_init): disable
	"gtk-alternative-button-order" here, so the plug-ins get it unset
	too. Completely fixes bug #170543.

	* app/gui/gui.c (gui_int): removed now redundant code.

2005-03-16  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c (gui_init): disable "gtk-alternative-button-order"
	since we don't provide an alternative button order in this branch.
	Fixes bug #170543.

2005-03-14  Manish Singh  <yosh@gimp.org>

	* app/display/gimpstatusbar.c: Make sure "focus-on-click" property
	exists before setting it on comboboxes (it didn't exist in GTK+ 2.4,
	where the behavior was what we wanted anyway).

2005-03-13  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/dialogs/print-size-dialog.c (print_size_dialog_response):
	handle the resolution unit correctly, fixes bug #170200.

2005-03-13  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* tools/pdbgen/pdb/drawable_transform.pdb
	(drawable_transform_scale)
	(drawable_transform_scale_default): applied fix from Theodor de
	Ment which fixes a wrong precondition check which made certain
	scale operations impossible. Fixes bug #170195.

	* tools/pdbgen/pdb/transform_tools.pdb (scale): fixed the same
	copy & paste bug here.

	* app/pdb/drawable_transform_cmds.c
	* app/pdb/transform_tools_cmds.c: regenerated.

2005-03-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/url.c: force the server-response wget option off
	so it doesn't screw up our parsing.

2005-03-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/file/file-open.c (file_open_layer): open images interactively.
	Fixes bug #168936.

2005-03-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/tools/gimppaintoptions-gui.c (fade_options_gui)
	(gradient_options_gui)
	* app/tools/gimpselectionoptions.c (gimp_selection_options_gui):
	call gimp_unit_menu_set_pixel_digits() after connecting up the