@@ -1,3 +1,12 @@
+2005-03-18  Sven Neumann  <sven@gimp.org>
+
+	Merged from HEAD branch:
+
+	* app/tools/gimpellipseselecttool.c
+	* app/tools/gimprectselecttool.[ch]: applied a patch by Nils
+	Bjorklund that should fix bug #143887 (selection rectangle "moves"
+	when starting at the top-right corner).
+
 2005-03-14  Manish Singh  <yosh@gimp.org>
 
 	* libgimpwidgets/gimpwidgets-private.c (gimp_widgets_init): disable
